[gd_scene load_steps=44 format=3 uid="uid://cbry2t5ueqaon"]

[ext_resource type="Script" path="res://scripts/ambaskele.gd" id="1_25pjm"]
[ext_resource type="Script" path="res://scripts/resources/parabolic.gd" id="2_nmb3f"]
[ext_resource type="Texture2D" uid="uid://bjd318k7pju3f" path="res://assets/gamesprites/enemies/ambaskele/Boss_Ambaskele_Idle-Sheet.png" id="3_2g7l8"]
[ext_resource type="Shader" path="res://shaders/hitflash.gdshader" id="3_bxurw"]
[ext_resource type="Texture2D" uid="uid://4cr75l2mhs2m" path="res://assets/gamesprites/enemies/ambaskele/Boss_Ambaskele_Walk-Sheet.png" id="4_2g1a5"]
[ext_resource type="Texture2D" uid="uid://drm0c2xv8t7nx" path="res://assets/gamesprites/enemies/ambaskele/Boss_Ambaskele_Attack_Meele_1-Sheet.png" id="4_rat0r"]
[ext_resource type="Texture2D" uid="uid://dfv10yot4pws6" path="res://assets/gamesprites/enemies/ambaskele/Boss_Ambaskele_Hurt-Sheet.png" id="5_1o2ty"]
[ext_resource type="Texture2D" uid="uid://4r7ppehmgwc1" path="res://assets/gamesprites/enemies/ambaskele/Boss_Ambaskele_Attack_Range-Sheet.png" id="5_iixbi"]
[ext_resource type="Texture2D" uid="uid://bo8aunokxyek7" path="res://assets/gamesprites/shadow.png" id="8_hebwy"]

[sub_resource type="Resource" id="Resource_qactr"]
script = ExtResource("2_nmb3f")
initial_velocity = 70.0
angle_degrees = 20.0
gravity = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3orwj"]
shader = ExtResource("3_bxurw")
shader_parameter/active = false
shader_parameter/tint = Color(1, 1, 1, 1)
shader_parameter/flash_interval = 0.15

[sub_resource type="AtlasTexture" id="AtlasTexture_omfwu"]
atlas = ExtResource("4_rat0r")
region = Rect2(0, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymxb5"]
atlas = ExtResource("4_rat0r")
region = Rect2(95, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0btk"]
atlas = ExtResource("4_rat0r")
region = Rect2(190, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_xyp48"]
atlas = ExtResource("4_rat0r")
region = Rect2(285, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpkh6"]
atlas = ExtResource("4_rat0r")
region = Rect2(380, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_otrto"]
atlas = ExtResource("4_rat0r")
region = Rect2(475, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_yqtv6"]
atlas = ExtResource("3_2g7l8")
region = Rect2(0, 0, 90, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcwid"]
atlas = ExtResource("3_2g7l8")
region = Rect2(90, 0, 90, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7fy0"]
atlas = ExtResource("3_2g7l8")
region = Rect2(180, 0, 90, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_e8lyq"]
atlas = ExtResource("3_2g7l8")
region = Rect2(270, 0, 90, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_eaxkf"]
atlas = ExtResource("3_2g7l8")
region = Rect2(360, 0, 90, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_twdwk"]
atlas = ExtResource("3_2g7l8")
region = Rect2(450, 0, 90, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbvmu"]
atlas = ExtResource("5_iixbi")
region = Rect2(0, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnc0j"]
atlas = ExtResource("5_iixbi")
region = Rect2(95, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_fb8ix"]
atlas = ExtResource("5_iixbi")
region = Rect2(190, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ris7w"]
atlas = ExtResource("5_iixbi")
region = Rect2(285, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_pi5bp"]
atlas = ExtResource("5_iixbi")
region = Rect2(380, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_f74n8"]
atlas = ExtResource("5_iixbi")
region = Rect2(475, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_qesmw"]
atlas = ExtResource("5_iixbi")
region = Rect2(570, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_7g80j"]
atlas = ExtResource("5_iixbi")
region = Rect2(665, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwmpv"]
atlas = ExtResource("5_iixbi")
region = Rect2(760, 0, 95, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_7x3y3"]
atlas = ExtResource("4_2g1a5")
region = Rect2(0, 0, 90, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_snd7t"]
atlas = ExtResource("4_2g1a5")
region = Rect2(90, 0, 90, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_dlb4u"]
atlas = ExtResource("4_2g1a5")
region = Rect2(180, 0, 90, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfkht"]
atlas = ExtResource("4_2g1a5")
region = Rect2(270, 0, 90, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_br2ie"]
atlas = ExtResource("4_2g1a5")
region = Rect2(360, 0, 90, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpx3w"]
atlas = ExtResource("4_2g1a5")
region = Rect2(450, 0, 90, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_6wbq6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omfwu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymxb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0btk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xyp48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpkh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_otrto")
}],
"loop": false,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_1o2ty")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yqtv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcwid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7fy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8lyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eaxkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_twdwk")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbvmu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnc0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fb8ix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ris7w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi5bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f74n8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qesmw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7g80j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwmpv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pi5bp")
}],
"loop": false,
"name": &"shoot",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7x3y3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snd7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dlb4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfkht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_br2ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpx3w")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_54auc"]
height = 48.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2hchr"]
radius = 14.0
height = 40.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x6ai3"]
size = Vector2(40.5, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xl5ri"]
size = Vector2(45.5, 49.5)

[node name="Ambaskele" type="CharacterBody2D" groups=["enemies"]]
texture_filter = 1
collision_layer = 2
collision_mask = 4
script = ExtResource("1_25pjm")
parabolic_stat = SubResource("Resource_qactr")

[node name="Ambaskele" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_3orwj")
sprite_frames = SubResource("SpriteFrames_6wbq6")
animation = &"attack"
autoplay = "idle"

[node name="Shadow" type="Sprite2D" parent="."]
show_behind_parent = true
position = Vector2(7, 30)
texture = ExtResource("8_hebwy")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(5, 6)
shape = SubResource("CapsuleShape2D_54auc")

[node name="DirectionUpdate" type="Timer" parent="."]
process_callback = 0
wait_time = 0.8
autostart = true

[node name="IdleTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="KnockbackRecoverTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.4
one_shot = true

[node name="AttackDelay" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="StaffHitbox" type="Area2D" parent="."]
collision_layer = 0
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaffHitbox"]
position = Vector2(-6, -1)
shape = SubResource("CapsuleShape2D_2hchr")
debug_color = Color(0.381848, 0.595654, 0.416095, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaffHitbox"]
position = Vector2(-13.25, 24.5)
shape = SubResource("RectangleShape2D_x6ai3")
debug_color = Color(0.381848, 0.595654, 0.416095, 0.42)

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
visible = false
position = Vector2(-14.75, 6.75)
shape = SubResource("RectangleShape2D_xl5ri")
debug_color = Color(0.636956, 0.518996, 0.250381, 0.42)

[node name="LeftBulletSpawnPoint" type="Marker2D" parent="."]
position = Vector2(-35, -7)

[node name="RightBulletSpawnPoint" type="Marker2D" parent="."]
position = Vector2(43, -7)

[connection signal="timeout" from="DirectionUpdate" to="." method="_on_direction_update_timeout"]
[connection signal="timeout" from="IdleTimer" to="." method="_on_idle_timer_timeout"]
[connection signal="timeout" from="KnockbackRecoverTimer" to="." method="_on_knockback_recover_timer_timeout"]
[connection signal="timeout" from="AttackDelay" to="." method="_on_attack_delay_timeout"]
[connection signal="body_entered" from="StaffHitbox" to="." method="_on_staff_hitbox_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_player_detector_body_entered"]
